==> aero530/Robit_xMega/Robit_xMega/src/RF24.c <==
#include "asf.h"
#include "string.h"
#include "nRF24L01.h"
#include "RF24_config.h"
#include "RF24.h"
#define _BV(bit) (1 << (bit))

void rf24_begin(void) {

// Initialize pins.
	ioport_configure_pin(rf24_ce_pin,   IOPORT_DIR_OUTPUT | IOPORT_INIT_LOW );
	ioport_configure_pin(rf24_csn_pin,  IOPORT_DIR_OUTPUT | IOPORT_INIT_LOW );
	
	ioport_configure_pin(rf24_ss_pin,   IOPORT_PULL_UP | IOPORT_DIR_INPUT );
	ioport_configure_pin(rf24_mosi_pin, IOPORT_INIT_HIGH | IOPORT_DIR_OUTPUT );
	ioport_configure_pin(rf24_miso_pin, IOPORT_DIR_INPUT );
	ioport_configure_pin(rf24_sck_pin,  IOPORT_INIT_HIGH | IOPORT_DIR_OUTPUT );

	// Initialize spi
	struct spi_device rf24_spi_device_conf = {
		.id = IOPORT_CREATE_PIN(PORTC, rf24_dummy_pin)
	};

	spi_master_init(&rf24_spi);
	spi_master_setup_device(&rf24_spi, &rf24_spi_device_conf, SPI_MODE_0, 8000000, 0);
	spi_enable(&rf24_spi);
	
	rf24_ce(LOW);
	rf24_csn(HIGH);


	// Must allow the radio time to settle else configuration bits will not necessarily stick.
	// This is actually only required following power up but some settling time also appears to
	// be required after resets too. For full coverage, we'll always assume the worst.
	// Enabling 16b CRC is by far the most obvious case if the wrong timing is used - or skipped.
	// Technically we require 4.5ms + 14us as a worst case. We'll just call it 5ms for good measure.
	// WARNING: Delay is based on P-variant whereby non-P *may* require different timing.
	delay_ms( 5 ) ;

	// Reset CONFIG and enable 16-bit CRC.
	rf24_write_register( CONFIG, 0b00001100 ) ; //works

	// Set 1500uS (minimum for 32B payload in ESB@250KBPS) timeouts, to make testing a little easier
	// WARNING: If this is ever lowered, either 250KBS mode with AA is broken or maximum packet
	// sizes must never be used. See documentation for a more complete explanation.
	rf24_setRetries(5,15); //calls write_register

	// Reset value is MAX
	//rf24_setPALevel( RF24_PA_MAX ) ;

	// Determine if this is a p or non-p RF24 module and then
	// reset our data rate back to default value. This works
	// because a non-P variant won't allow the data rate to
	// be set to 250Kbps.
	//
	//Manually set p variant to false.  should reenable this bit of code once stuff is working
	//
	p_variant = false;
	if( rf24_setDataRate( RF24_250KBPS ) ) {
		p_variant = true ;
	}
	

	// Then set the data rate to the slowest (and most reliable) speed supported by all
	// hardware.
	rf24_setDataRate( RF24_1MBPS ) ;

	// Initialize CRC and request 2-byte (16bit) CRC
	//rf24_setCRCLength( RF24_CRC_16 ) ;

	// Disable dynamic payloads, to match dynamic_payloads_enabled setting - Reset value is 0
	rf24_toggle_features();
	rf24_write_register(FEATURE,0 );
	rf24_write_register(DYNPD,0);

	// Reset current status
	// Notice reset and flush is the last thing we do
	rf24_write_register(STATUS_RF,_BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT) );

	// Set up default configuration.  Callers can always change it later.
	// This channel should be universally safe and not bleed over into adjacent
	// spectrum.
	rf24_setChannel(76);

	// Flush buffers
	rf24_flush_rx();
	rf24_flush_tx();

	rf24_powerUp(); //Power up by default when begin() is called

	// Enable PTX, do not write CE high so radio will remain in standby I mode ( 130us max to transition to RX or TX instead of 1500us from powerUp )
	// PTX should use only 22uA of power
	rf24_write_register(CONFIG, ( rf24_read_register(CONFIG) ) & ~_BV(PRIM_RX) );

}

uint8_t rf24_read_register(uint8_t reg) {
	//uint8_t result[1] = {0x00};
	//uint8_t wpacket[1] = {R_REGISTER | ( REGISTER_MASK & reg )};
	uint8_t result;
	
	rf24_csn(LOW);

	//spi_write_packet(&SPIC, wpacket, 1);
	//spi_read_packet(&SPIC, result, 1);
	
	rf24_spi_writeread(&SPIC, R_REGISTER | ( REGISTER_MASK & reg ));
	result = rf24_spi_writeread(&SPIC, 0xFF);
	
	rf24_csn(HIGH);

	return result;
}

uint8_t rf24_write_register(uint8_t reg, uint8_t value) {

  uint8_t status;
  
  uint8_t wval[1] = {value};
  
  rf24_csn(LOW);
  //spi_write_packet(&SPIC, wreg, 1);
  //spi_read_packet(&SPIC, status, 1);
  status = rf24_spi_writeread(&SPIC, W_REGISTER | ( REGISTER_MASK & reg ));
  
  spi_write_packet(&SPIC, wval, 1);
  rf24_csn(HIGH);

  return status;
}

uint8_t rf24_write_payload(void* buf, uint8_t data_len, const uint8_t writeType) {
  uint8_t status;
  
  data_len = rf24_min(data_len, payload_size);
  uint8_t blank_len = dynamic_payloads_enabled ? 0 : payload_size - data_len;

  rf24_csn(LOW);
  
  //spi_write_packet(&SPIC, wtype, 1);
  //spi_read_packet(&SPIC, status, 1);
  status = rf24_spi_writeread(&SPIC, writeType);
  
  spi_write_packet(&SPIC, (uint8_t*)buf, data_len);
  for (uint8_t i=0; i<blank_len; i++) {
	spi_write_packet(&SPIC, 0, 1);
  }

  rf24_csn(HIGH);

  return status;
}

uint8_t rf24_read_payload(void *buf, uint8_t data_len) {
  uint8_t status;
  uint8_t* current = (uint8_t*)(buf);

  if(data_len > payload_size) data_len = payload_size;
  uint8_t blank_len = dynamic_payloads_enabled ? 0 : payload_size - data_len;
  
  uint8_t blank_buf[blank_len];
  
  rf24_csn(LOW);

  //spi_write_packet(&SPIC, wreg, 1);
  //spi_read_packet(&SPIC, status, 1);
  status = rf24_spi_writeread(&SPIC, R_RX_PAYLOAD);
  
  spi_read_packet(&SPIC, &current[0], data_len);
  spi_read_packet(&SPIC, blank_buf, blank_len);
 
  rf24_csn(HIGH);

  return status;
}

uint8_t rf24_get_status(void) {
  return rf24_spiTrans(NOP);
}

void rf24_setChannel(uint8_t channel) {
  const uint8_t max_channel = 127;
  rf24_write_register(RF_CH,rf24_min(channel,max_channel));
}

void rf24_startListening(void) {

  rf24_write_register(CONFIG, rf24_read_register(CONFIG) | _BV(PRIM_RX));
  rf24_write_register(STATUS_RF, _BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT) );
  rf24_ce(HIGH);
  
  // Restore the pipe0 adddress, if exists
  if (pipe0_reading_address[0] > 0){
    rf24_write_register_chunk(RX_ADDR_P0, pipe0_reading_address, addr_width);	
  }else{
	rf24_closeReadingPipe(0);
  }

  // Flush buffers
  //flush_rx();
  if(rf24_read_register(FEATURE) & _BV(EN_ACK_PAY)){
	rf24_flush_tx();
  }

  // Go!
  //delayMicroseconds(100);
}

void rf24_stopListening(void) {  
  rf24_ce(LOW);

  delay_us(txRxDelay);
  
  if(rf24_read_register(FEATURE) & _BV(EN_ACK_PAY)){
    delay_us(txRxDelay); //200
	rf24_flush_tx();
  }
  //flush_rx();
  rf24_write_register(CONFIG, ( rf24_read_register(CONFIG) ) & ~_BV(PRIM_RX) );
 
  rf24_write_register(EN_RXADDR,rf24_read_register(EN_RXADDR) | _BV(pgm_read_byte(&child_pipe_enable[0]))); // Enable RX on pipe0
  
  //delayMicroseconds(100);

}

void rf24_powerUp(void) {
   uint8_t cfg = rf24_read_register(CONFIG);

   // if not powered up then power up and wait for the radio to initialize
   if (!(cfg & _BV(PWR_UP))){
      rf24_write_register(CONFIG,rf24_read_register(CONFIG) | _BV(PWR_UP));

      // For nRF24L01+ to go from power down mode to TX or RX mode it must first pass through stand-by mode.
	  // There must be a delay of Tpd2stby (see Table 16.) after the nRF24L01+ leaves power down mode before
	  // the CEis set high. - Tpd2stby can be up to 5ms per the 1.0 datasheet
	  delay_ms(5);

   }
}

bool rf24_write( void* buf, uint8_t len ){
	return rf24_write_ack_noack(buf,len,0);
}

bool rf24_writeFast( void* buf, uint8_t len ) {
	return rf24_writeFast_ack_noack(buf,len,0);
}

bool rf24_available(uint8_t* pipe_num) {
  // pass null if you don't want the pipe number
  if (!( rf24_read_register(FIFO_STATUS) & _BV(RX_EMPTY) )){

    // If the caller wants the pipe number, include that
    if ( pipe_num ){
	  uint8_t status = rf24_get_status();
      *pipe_num = ( status >> RX_P_NO ) & 0b111;
  	}
  	return 1;
  }

  return 0;
}

void rf24_read( void *buf, uint8_t len ) {

  // Fetch the payload
  rf24_read_payload( buf, len );

  //Clear the two possible interrupt flags with one command
  rf24_write_register(STATUS_RF,_BV(RX_DR) | _BV(MAX_RT) | _BV(TX_DS) );

}

void rf24_openWritingPipe(uint8_t *address) {
  // Note that AVR 8-bit uC's store this LSB first, and the NRF24L01(+)
  // expects it LSB first too, so we're good.

  rf24_write_register_chunk(RX_ADDR_P0, address, addr_width);
  rf24_write_register_chunk(TX_ADDR,    address, addr_width);

  //const uint8_t max_payload_size = 32;
  //write_register(RX_PW_P0,rf24_min(payload_size,max_payload_size));
  rf24_write_register(RX_PW_P0,payload_size);
}

void rf24_setAddressWidth(uint8_t a_width) {

	if(a_width -= 2){
		rf24_write_register(SETUP_AW,a_width%4);
		addr_width = (a_width%4) + 2;
	}

}

void rf24_openReadingPipe(uint8_t child, uint8_t *address) {
  // If this is pipe 0, cache the address.  This is needed because
  // openWritingPipe() will overwrite the pipe 0 address, so
  // startListening() will have to restore it.
  if (child == 0) {
    memcpy(pipe0_reading_address,address,addr_width);
  }
  if (child <= 6) {
    // For pipes 2-5, only write the LSB
    if ( child < 2 ) {
      rf24_write_register_chunk(pgm_read_byte(&child_pipe[child]), address, addr_width);
    } else {
      rf24_write_register_chunk(pgm_read_byte(&child_pipe[child]), address, 1);
	}
    rf24_write_register(pgm_read_byte(&child_payload_size[child]),payload_size);

    // Note it would be more efficient to set all of the bits for all open
    // pipes at once.  However, I thought it would make the calling code
    // more simple to do it this way.
    rf24_write_register(EN_RXADDR,rf24_read_register(EN_RXADDR) | _BV(pgm_read_byte(&child_pipe_enable[child])));

  }
}

void rf24_closeReadingPipe( uint8_t pipe ) {
  rf24_write_register(EN_RXADDR,rf24_read_register(EN_RXADDR) & ~_BV(pgm_read_byte(&child_pipe_enable[pipe])));
}

bool rf24_setDataRate(rf24_datarate_e speed) {
  bool result = false;
  uint8_t setup = rf24_read_register(RF_SETUP) ;

  // HIGH and LOW '00' is 1Mbs - our default
  setup &= ~(_BV(RF_DR_LOW) | _BV(RF_DR_HIGH)) ;
 
  //32Mhz uC
  txRxDelay=170;

  if( speed == RF24_250KBPS ) {
    // Must set the RF_DR_LOW to 1; RF_DR_HIGH (used to be RF_DR) is already 0
    // Making it '10'.
    setup |= _BV( RF_DR_LOW ) ;
    
	//32Mhx uC
	txRxDelay=310;
  } else {
    // Set 2Mbs, RF_DR (RF_DR_HIGH) is set 1
    // Making it '01'
    if ( speed == RF24_2MBPS ) {
      setup |= _BV(RF_DR_HIGH);
      //32Mhz uC
	  txRxDelay=130;
    }
  }
  rf24_write_register(RF_SETUP,setup);

  // Verify our result
  if ( rf24_read_register(RF_SETUP) == setup ) {
    result = true;
  }

  return result;
}

void rf24_setRetries(uint8_t delay, uint8_t count) {
  rf24_write_register(SETUP_RETR,(delay&0xf)<<ARD | (count&0xf)<<ARC);
}
